# bare-lang

./: Readme.md  first.tl  install-stdlib.sh  install.sh
lib/: CMakeLists.txt  test.s
lib/include/std/: test.th
src/: CMakeLists.txt  main.cpp
src/ast/: Statement.hpp  Types.hpp  astdot.cpp
src/compiler/llvm/: Builder.cpp  Compiler.cpp
src/debug/: AstDebug.cpp
src/lex/: lex.py
src/parser/: Parser.cpp  Parser.hpp  Variable.cpp
src/preproc/: Preproc.cpp
